<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favorite.EditFavoritActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Edit Game favorit"
        app:navigationIcon="@drawable/ic_close"
        app:titleTextColor="@color/colorPrimary"
        app:navigationIconTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleCentered="true">

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:id="@+id/sv_edit_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/normal_125"
            android:layout_marginEnd="@dimen/normal_125">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/h6"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/small_100">

                <EditText
                    android:id="@+id/et_title_game"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:paddingStart="@dimen/normal_100"
                    android:hint="@string/title"
                    android:paddingEnd="@dimen/normal_100"
                    android:textColor="@color/black"
                    android:textColorHint="#4D000000"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/h6"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/normal_75"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/small_100">

                <EditText
                    android:id="@+id/et_genre_game"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:paddingStart="@dimen/normal_100"
                    android:hint="@string/genre"
                    android:paddingEnd="@dimen/normal_100"
                    android:textColor="@color/black"
                    android:textColorHint="#4D000000"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/platform"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/h6"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/normal_75"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/small_100">

                <EditText
                    android:id="@+id/et_platform_game"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:paddingStart="@dimen/normal_100"
                    android:hint="@string/platform"
                    android:paddingEnd="@dimen/normal_100"
                    android:textColor="@color/black"
                    android:textColorHint="#4D000000"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publisher"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/h6"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/normal_75"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/small_100">

                <EditText
                    android:id="@+id/et_publisher_game"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:paddingStart="@dimen/normal_100"
                    android:hint="@string/publisher"
                    android:paddingEnd="@dimen/normal_100"
                    android:textColor="@color/black"
                    android:textColorHint="#4D000000"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/h6"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/normal_75"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/small_100">

                <EditText
                    android:id="@+id/et_developer_game"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:paddingStart="@dimen/normal_100"
                    android:hint="@string/developer"
                    android:paddingEnd="@dimen/normal_100"
                    android:textColor="@color/black"
                    android:textColorHint="#4D000000"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/h6"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/normal_75"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/small_100"
                android:layout_marginBottom="@dimen/normal_250" >

                <EditText
                    android:id="@+id/et_description_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/description"
                    android:paddingStart="@dimen/normal_100"
                    android:paddingEnd="@dimen/normal_100"
                    android:paddingTop="@dimen/normal_100"
                    android:paddingBottom="@dimen/normal_100"
                    android:textColor="@color/black"
                    android:textColorHint="#4D000000"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:paddingStart="@dimen/normal_100"
                android:paddingEnd="@dimen/normal_100"
                android:text="  "
                android:textColor="#00000000"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_done_outline"
        app:backgroundTint="@color/colorPrimary"
        app:tint="@color/white"
        app:layout_anchor="@id/sv_edit_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/normal_125"
        android:layout_marginBottom="@dimen/normal_125"/>

</androidx.constraintlayout.widget.ConstraintLayout>